@startuml classDiagramInheritance

class BaseEmployee {
    - baseSalary : int 

    + BaseEmployee(firstName : String, lastName : String, SSN : String, baseSalary: int)
    + getBaseSalary() : int  
    + setBaseSalary(baseSalary : int) : void
    + toString() : String
}

class CommissionEmployee {
    - commissionRate : int
    - grossSales : int

    + CommissionEmployee(firstName : String, lastName : String, SSN : String, commissionRate : int, grossSales : int)
    + getCommissionRate() : int
    + setCommissionRate(commissionRate : int) : void
    + getGrossSales() : int
    + setGrossSales(grossSales : int) : void
    + toString() : String 
}

class Employee {
    - firstName : String
    - lastName : String
    - socialSecurityNumber : String

    + Employee(firstName: String, lastName : String, SSN : String)
    + getFirstName() : String
    + getLastName() : String
    + getSocialSecurityNumber() : String
    + setFirstName(firstName : String) : void
    + setLastname(lastName : String) : void 
    + toString() : String

}

class HourlyEmployee {
    - wage : int
    - numberOfHoursWorked : int

    + HourlyEmployee(firstName : String, lastName: String, SSN : String, wage : int, numberOfHoursWorked : int)
    + getWage() : int
    + setWage(wage : int) : void
    + getHoursWorked() : int 
    + setHoursWorked(hoursWorked : int) : void
    + toString() : String
}

class SalariedEmployee {
    - weeklySalary : int

    + SalariedEmployee(firstName : String, lastName : String, SSN : String, weeklySalary : int)
    + getweeklySalary() : int 
    + setWeeklySalary(weeklySalary : int) : void
    + toString() : String
    }

class InheritanceDriver {
    
}

Employee <|-- CommissionEmployee
Employee <|-- BaseEmployee
Employee <|-- HourlyEmployee
Employee <|-- SalariedEmployee
@enduml 



